# items_crud

./: Dockerfile  pyproject.toml
app/: main.py
