[tool.poetry]
name = "expert-robot"
version = "0.1.0"
description = ""
authors = ["liviaspereira <liviaspereira@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.70.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
